# TheKilnGod

./: .gitignore  .pre-commit-config.yaml  CURSOR_COMMAND_ISSUE.md  README.md  config.py  diagnose_commands.sh  display.py  display_example.py  kiln-controller.py  monitor_cpu.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run-health-trends.py  secrets_example.py  start-on-boot  test_buzzer.py  test_display.py  test_icons.py  test_image_display.py  test_mqtt_simple.py  test_pzem.py  test_upspack.py  test_upspack_9600.py  thekilngod  tuning.csv
.github/workflows/: ci.yml
Test/: test_telemetry_math.py
docs/: api.md  api_v1_contract.md  board_spec_v1.md  bruce_vs_thekilngod.md  conventions.md  features-and-capabilities.md  features_and_capabilities.md  homeassistant_example.yaml  logs.md  ntfy-notifications.md  ntfy_notifications.md  old_to_new.md  restructure_baseline_checklist.md  restructure_plan.md  run-health.md  run_health.md  schedule.md  troubleshooting.md  ui-modernization-coding-plan.md  ui-v2.md  ui_modernization_coding_plan.md  ui_v2.md  watcher.md  ziegler_tuning.md
images/hex/: clock.hex  flame.hex  gemini_7ed2r7ed2r7ed2r7.hex  gemini_ioijkkioijkkioij.hex  gemini_s7o7njs7o7njs7o7.hex  kiln_god_0.hex  kiln_god_3.hex  kiln_god_5.hex  pottery.hex  pottery_flame_1.hex  snowflake.hex  stop_sign.hex
lib/: buzzer.py  homeassistant_mqtt.py  notifications.py  oven.py  ovenWatcher.py  telemetry_math.py
lib/init/: kiln-controller.service  smoker.service
public/: index.html  state.html
public/assets/css/: picoreflow.css  state.css
public/assets/js/: picoreflow.js  state.js
scripts/: diagnose_thermocouple.py  firing_analyzer.py  kiln_logger.py  kiln_tuner.py  spi_wire_check.py  test_power_sensor.py  test_thermocouple.py  watcher.py
src/thekilngod/: __init__.py  __main__.py  buzzer.py  cli.py  controller.py  display.py  display_updater.py  firing_analyzer.py  firing_record.py  homeassistant_mqtt.py  notifications.py  oven.py  oven_watcher.py  power_sensor.py  run_health_trends.py  telemetry_math.py  thermocouple_diagnostics.py
src/thekilngod/images/hex/: flame.hex  kiln_god_1.hex  kiln_god_2.hex  kiln_god_4.hex  pottery_flame_2.hex  pottery_flame_3.hex  pottery_flame_4.hex  pottery_flame_5.hex
storage/: tuning.csv
storage/logs/: run-health-history.jsonl
storage/profiles/: cone-04-candle-bisque.json  cone-04-standard-bisque.json  cone-6-drop-hold-top-soak-5.json  cone-6-drop-hold.json  cone-6-standard.json
tests/: conftest.py
tests/hardware/: test_buzzer.py  test_display.py  test_display_demo.py  test_image_display.py  test_mqtt_simple.py  test_upspack.py  test_upspack_9600.py
tests/unit/: test_catchup_supervisor.py  test_controller.py  test_firing_analyzer.py  test_firing_record.py  test_oven.py  test_power_sensor.py  test_profile.py  test_telemetry_math.py  test_thermocouple_diagnostics.py
ui-v2/: index.html  package-lock.json  package.json  vite.config.ts
ui-v2/src/: App.tsx  styles.css  types.ts
